--- a/halo/details.html
+++ b/halo/details.html
@@ -100,13 +100,13 @@
           <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
           <li class="breadcrumb-item"><a href="camera-hub.html">Máy ảnh</a></li>
           <li class="breadcrumb-item"><a href="dslr-hub.html">Máy ảnh DSLR</a></li>
-          <li class="breadcrumb-item active">Canon EOS 1DX Mark III</li>
+          <li class="breadcrumb-item active">Canon EOS 1DX Mark&nbsp;III</li>
         </ul>
       </div>
       <div class="details__wrapper container-xl"> 
-        <h1 class="details__header w-100 text-left">Máy ảnh DSLR <span class="logo-canon">Canon </span>1DX Mark III </h1>
+        <h1 class="details__header w-100 text-left">Máy ảnh DSLR Canon EOS 1DX Mark&nbsp;III </h1>
         <div class="details__review-score w-100">
-          <h2 class="score--user font-weight-bold text-left">Người dùng đánh giá: <span>x / 5</span></h2>
+          <h2 class="score--user font-weight-bold text-left">Người dùng đánh&nbsp;giá: <span>x / 5</span></h2>
           <h2 class="score--shop font-weight-bold text-left">HALO đánh giá: <span>x / 5</span></h2>
         </div>
         <section class="details__img-area"><img class="details__main-img" src="img/img--details/detail__main-img-1.jpg" alt="Canon 1DX Mark III">
@@ -123,7 +123,7 @@
           <div class="summary__basic">
             <h2 class="details__sub-header">Thông tin cơ bản</h2>
             <p class="summary__text">Xuất xứ: Chính hãng, fullbox<br>Độ phân giải: 20.1 MP<br>Kích cỡ cảm biến: Full-frame<br>Ngàm: EF Mount<br>Bảo hành: Chính hãng 24 tháng <a class="text-primary font-italic" href="#">(xem chi tiết)</a></p>
-            <p class="summary__text">Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của Canon.</p>
+            <p class="summary__text">Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của&nbsp;Canon.</p>
             <p class="details__price">130.090.000đ</p>
             <p class="details__sale-text"><span class="details__old-price">138.090.000đ</span><span class="details__sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="details__sale-amount">(Giảm 8.000.000đ)</span></p>
             <div class="summary__btn-wrapper"><a class="summary__btn btn d-flex justify-content-center align-items-center" href="cart.html">Mua ngay      </a>
@@ -132,11 +132,11 @@
             <div class="summary__box-content"> 
               <h2 class="details__sub-header text-left mb-3">Hộp sản phẩm bao gồm</h2>
               <ul class="box-content__list">
-                <li class="box-content__item">1x Máy ảnh Canon EOS-1D X Mark III</li>
+                <li class="box-content__item">1x Máy ảnh Canon EOS-1D X Mark&nbsp;III</li>
                 <li class="box-content__item">1x pin Canon LP-E19</li>
                 <li class="box-content__item">1x dock sạc Canon LC-E19</li>
                 <li class="box-content__item">1x nắp ngàm EF</li>
-                <li class="box-content__item">1x dây đeo Canon L7 Wide Straps cỡ XL</li>
+                <li class="box-content__item">1x dây đeo Canon L7 Wide Straps cỡ&nbsp;XL</li>
               </ul>
             </div>
           </div>
@@ -149,10 +149,10 @@
           <div class="offers__special">
             <h2 class="details__sub-header">Ưu đãi đặc biệt</h2>
             <ul class="special__list">
-              <li class="special__item">- Miễn phí giao hàng toàn quốc trong vòng 2 - 5 ngày</li>
-              <li class="special__item">- Hỗ trợ dán màn hình miễn phí trọn đời sản phẩm.</li>
-              <li class="special__item">- Miễn phí vệ sinh, khử mốc trong thời hạn bảo hành </li>
-              <li class="special__item">- Tặng voucher giá trị 1.000.000đ cho lần mua hàng kế tiếp</li>
+              <li class="special__item">- Miễn phí giao hàng toàn quốc trong vòng 2&nbsp;-&nbsp;5&nbsp;ngày</li>
+              <li class="special__item">- Hỗ trợ dán màn hình miễn phí trọn đời sản&nbsp;phẩm.</li>
+              <li class="special__item">- Miễn phí vệ sinh, khử mốc trong thời hạn bảo&nbsp;hành </li>
+              <li class="special__item">- Tặng voucher giá trị 1.000.000đ cho lần mua hàng kế&nbsp;tiếp</li>
             </ul>
           </div>
           <button class="offers__btn btn">Đăng ký mua trả góp lãi suất 0%</button>
@@ -162,14 +162,14 @@
           <div class="main-info__toggler" data-toggle="collapse" data-target="#intro"><span class="details__sub-header">Giới thiệu</span><span class="main-info__toggler-indicator"><i class="fas fa-chevron-up"></i></span></div>
           <div class="main-info__content collapse show" id="intro">
             <h3 class="main-info__inner-header">Cảm biến mới, hệ thống hình ảnh mới</h3><img src="img/img--details/intro-img-1.jpg" alt="Canon 1DX Mark III">
-            <p>Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng mới. </p><img src="img/img--details/intro-img-2.png" alt="Canon 1DX Mark III">
-            <p>Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác nhau. </p>
+            <p>Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng&nbsp;mới. </p><img src="img/img--details/intro-img-2.png" alt="Canon 1DX Mark III">
+            <p>Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác&nbsp;nhau. </p>
             <h3 class="main-info__inner-header">Hệ thống lấy nét</h3><img src="img/img--details/intro-img-3.jpg" alt="Canon 1DX Mark III">
-            <p>Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu sắc.</p>
+            <p>Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu&nbsp;sắc.</p>
             <h3 class="main-info__inner-header">Tốc độ đỉnh cao</h3><img src="img/img--details/intro-img-4.jpg" alt="Canon 1DX Mark III">
-            <p>Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết định.</p>
+            <p>Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết&nbsp;định.</p>
             <h3 class="main-info__inner-header">Thiết kế bền bỉ</h3><img src="img/img--details/intro-img-6.png" alt="Canon 1DX Mark III">
-            <p>EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm vụ.</p>
+            <p>EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm&nbsp;vụ.</p>
           </div>
           <div class="main-info__toggler" data-toggle="collapse" data-target="#specs"><span class="details__sub-header">Thông số kỹ thuật</span><span class="main-info__toggler-indicator"> <i class="fas fa-chevron-up"></i></span></div>
           <div class="main-info__content collapse show" id="specs">
@@ -177,7 +177,7 @@
               <h3 class="main-info__inner-header">Hình ảnh</h3>
               <div class="category__row">
                 <p class="category__key">Kích cỡ cảm biến</p>
-                <p class="category__value">Full frame BSI-CMOS (35.9 x 23.9 mm)</p>
+                <p class="category__value">Full frame BSI-CMOS (35.9&nbsp;x&nbsp;23.9&nbsp;mm)</p>
               </div>
               <div class="category__row">
                 <p class="category__key">Độ Phân Giải</p>
@@ -192,7 +192,7 @@
               <h3 class="main-info__inner-header">Ánh sáng</h3>
               <div class="category__row">
                 <p class="category__key">ISO</p>
-                <p class="category__value">100 - 102400 (Mở rộng: 50 - 819200)</p>
+                <p class="category__value">100 - 102400 (Mở rộng: 50&nbsp;-&nbsp;819200)</p>
               </div>
               <div class="category__row">
                 <p class="category__key">Tốc Độ Chụp Liên Tục</p>
@@ -211,7 +211,7 @@
               </div>
               <div class="category__row">
                 <p class="category__key">Micro</p>
-                <p class="category__value">2 micro stereo (hỗ trợ micro ngoài)</p>
+                <p class="category__value">2 micro stereo (hỗ trợ micro&nbsp;ngoài)</p>
               </div>
             </div>
             <div class="specs__category"> 
@@ -237,7 +237,7 @@
               </div>
               <div class="category__row">
                 <p class="category__key">Jack Cắm</p>
-                <p class="category__value">USB Type-C (USB 3.1), HDMI C (Mini), Canon N3, 3.5mm Headphone, 3.5mm Microphone, PC Sync Socket, RJ45</p>
+                <p class="category__value">USB Type-C (USB 3.1), HDMI C (Mini), Canon N3, 3.5mm Headphone, 3.5mm Microphone, PC Sync&nbsp;Socket,&nbsp;RJ45</p>
               </div>
               <div class="category__row">
                 <p class="category__key">Kết Nối Không Dây</p>
@@ -252,7 +252,7 @@
               <h3 class="main-info__inner-header">Pin / Kích Thước / Trọng Lượng</h3>
               <div class="category__row">
                 <p class="category__key">Pin</p>
-                <p class="category__value">1 x LP-E19 Lithium-Ion, 2750 mAh (Trung bình 2850 Shots)</p>
+                <p class="category__value">1 x LP-E19 Lithium-Ion, 2750 mAh (Trung bình 285&nbsp;Shots)</p>
               </div>
               <div class="category__row">
                 <p class="category__key">Kích Thước</p>
@@ -269,7 +269,7 @@
             <div class="review__content">
               <h1 class="review__header text-left">Canon 1DX Mark III: Vua của các vị vua</h1>
               <div class="review__sub-header"> <span class="author font-italic">Trung Đức</span><span class="time font-italic"> <i class="far fa-clock"></i>01/01/2021</span></div>
-              <p class="review__sub-preview">1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao, mà còn là niềm cảm hứng bất tận khi tác nghiệp. Đây là camera có độ ổn định cao nhất thế giới: dù là ra chiến trường, leo đỉnh Everest hay đơn thuần là chụp người thương, bạn sẽ luôn thấy an tâm là sẽ có những tấm ảnh chất lượng và tối ưu nhất.</p>
+              <p class="review__sub-preview">1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao, mà còn là niềm cảm hứng bất tận khi tác nghiệp. Đây là camera có độ ổn định cao nhất thế giới: dù là ra chiến trường, leo đỉnh Everest hay đơn thuần là chụp người thương, bạn sẽ luôn thấy an tâm là sẽ có những tấm ảnh chất lượng và tối ưu&nbsp;nhất.</p>
               <button class="review__btn btn--dark btn">Xem chi tiết</button>
             </div>
           </div>
